delete + edit + addNew + changDB

--- a/src/app/components/add-course/add-course.component.html
+++ b/src/app/components/add-course/add-course.component.html
@@ -1,1 +1,65 @@
-<p>add-course works!</p>
+<div class="row">
+    <div class="col-8 offset-2">
+        <h2>Add New Course </h2>
+        <form #f="ngForm" (ngSubmit)="onSubmit()" >
+
+            <div class="mb-3">
+                <label for="name" class="form-label">Name</label>
+                <input 
+                    type="text"
+                    class="form-control"  
+                    aria-describedby="name" 
+                    ngModel 
+                    #name="ngModel"
+                    [(ngModel)]="course.name"
+                    required
+                    minlength="3"
+                    name="name"
+                    >
+                <div  class="form-text" *ngIf="name.touched && name.invalid">
+                   Course name is required, and must be minimum 3 characters.
+                </div>
+            </div>
+            <div class="mb-3">
+                <label for="desc" class="form-label">Desciption</label>
+                <input 
+                    type="text"
+                    class="form-control"  
+                    aria-describedby="desc" 
+                    ngModel 
+                    [(ngModel)]="course.desc"
+                    name="desc"
+                    >
+            </div>
+            <div class="mb-3">
+                <label for="price" class="form-label">Price</label>
+                <input 
+                    type="number"
+                    class="form-control"  
+                    aria-describedby="price" 
+                    ngModel 
+                    required
+                    min="10"
+                    #price="ngModel"
+                    [(ngModel)]="course.price"
+                    name="price"
+                    >
+                <div  class="form-text"  *ngIf="price.touched && price.invalid" >
+                    Price is required, and must be positive.
+                </div>
+            </div>
+
+            <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox"
+                 ngModel 
+                 [(ngModel)]="course.isActive"
+                 name="isActive"
+                 >
+                <label class="form-check-label" for="flexCheckDefault">
+                  Active
+                </label>
+              </div>
+            <button class="btn btn-primary" [disabled]="f.invalid" >Save Course</button>
+        </form>        
+    </div>
+</div>
